# mISDNuser

./: .gitignore  45-misdn.rules.in  AUTHORS  CHANGES  CodeStyle  GNUmakefile  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  checkout-branch.sh  checkout-mISDNuser_1_1.sh  checkout-portability.sh  configure  configure.ac  mISDNuser.spec
bridge/: .gitignore  Makefile  Makefile.am  Makefile.in  bridge.c
capi20/: .gitignore  Makefile.am  Makefile.in  SupplementaryService.c  SupplementaryService.h  alaw.c  alaw.h  application.c  capi20.conf.sample  capi_obj.c  daemon.c  faxl3.c  g3_mh.c  g3_mh.h  listen.c  lplci.c  m_capi.h  m_capi_sock.h  m_capi_sock.h.in  mc_buffer.c  mc_buffer.h  mplci.c  ncci.c  ncci.h  sff.c  sff.h
capi20/module/: Makefile.am  Makefile.in  capi_mod_misdn.c
debugtool/: Makefile  mISDNdebugtool.c
doc/: README.debugtool
example/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  cleanl2.c  loadfirm.c  logger.c  loghex.c  misdnportinfo.c  sendhwctrl.c  test_file  test_file.in  test_file.out  test_x75.in  test_x75.out  testcon.c  testcon_l2.c  testlayer1.c  testlayer3.c  testnet.c
guitools/: Makefile.am  Makefile.in
guitools/qmisdnwatch/: Makefile.am  Makefile.in  README  qmisdnwatch.pro
guitools/qmisdnwatch/res/: icons.qrc
guitools/qmisdnwatch/src/: Ql1logThread.cpp  Ql1logThread.h  extraWidgets.cpp  extraWidgets.h  main.cpp  mainWindow.cpp  mainWindow.h  misdn.cpp  misdn.h
i4lnet/: Makefile  bchannel.c  fsm.c  fsm.h  g711.c  isdn_debug.c  isdn_msg.c  manager.c  net_if.c  net_l2.c  net_l2.h  net_l3.c  net_l3.h  nettst.c  sndloop.c  sndloop2.c  tei.c  tone.c
include/: Makefile.am  Makefile.in  bchannel.h  config.h.in  g711.h  helper.h  ibuffer.h  isdn_debug.h  isdn_msg.h  isdn_net.h  isound.h  l3dss1.h  mISDNif.h  mISDNlib.h  mbuffer.h  mlayer3.h  q931.h  tone.h
include/mISDN/: .gitignore  af_isdn.h  l3dss1.h  mISDNcompat.h.in  mISDNif.h  mbuffer.h  mlayer3.h  q931.h  suppserv.h
info/: Makefile  info.c  isdninfo  rename.c
l1oip/: .gitignore  Makefile  Makefile.am  Makefile.in  l1oipctrl.c
layer3/: Makefile  debug.c  debug.h  dss1.h  dss1net.c  dss1user.c  layer3.c  layer3.h  mbuffer.c  mlayer3.c  q931.c
lib/: Makefile  Makefile.am  Makefile.in  debug.c  debug.h  device.c  dss1.h  dss1net.c  dss1user.c  fsm.c  fsm.h  helper.h  layer.c  layer3.c  layer3.h  mbuffer.c  mlayer3.c  mlist.h  mtimer.c  mtimer.h  q931.c  stack.c  status.c
lib/asn1/: asn1.c  asn1_enc.c  asn1_generic.c
lib/include/: 3pty.h  asn1.h  ccbs.h  debug.h  diversion.h  dss1.h  ect.h  fsm.h  helper.h  layer3.h  mlist.h  mtimer.h
lib/layer3/: dss1net.c  dss1user.c  layer3.c  mlayer3.c  q931.c
lib/misc/: debug.c  fsm.c  mbuffer.c  mtimer.c
lib/suppserv/: 3pty.c  address.c  aoc.c  basic_service.c  ccbs.c  component.c  diversion.c  ect.c  fac.c
suppserv/: Makefile  Makefile.am  Makefile.in  asn1.c  asn1.h  asn1_address.c  asn1_aoc.c  asn1_basic_service.c  asn1_comp.c  asn1_diversion.c  asn1_diversion.h  asn1_ect.c  asn1_enc.c  asn1_generic.c  fac.c  suppserv.h
tenovis/: Makefile  testlib.c  tstlib.c
tenovis/lib/: Makefile  tenovis.h  tenovis_device.c  tenovis_int.h  tenovis_intern.c
tools/: .gitignore  E1test.c  Makefile  Makefile.am  Makefile.in  call_log.c  call_log.h  cleanl2.c  info.c  logger.c  logger.h  logger_config_parser.l  loghex.c  misdnlogger.cfg  rename.c  text_wireshark.c
voip/: Makefile  Makefile.org  cfg.lex  globals.h  iapplication.h  options.h  prep.conf  read_cfg.c  rtp.h  rtpacket.c  rtpacket.h  testlog  tstcfg  tstparse.c  vitimer.h  voip_appl.c  voip_isdn.c  voip_isdn_app.c  voip_timer.c  voipisdn.spec
voip/example/: pingi2.voip.cfg  rec_ctrl.sample
