lib_LTLIBRARIES = libsuppserv.la
libsuppserv_la_SOURCES = asn1.c asn1_enc.c asn1_generic.c asn1_aoc.c asn1_basic_service.c asn1_comp.c \
			 asn1_diversion.c asn1_address.c asn1_ccbs.c asn1_ccbs.h fac.c asn1_diversion.h \
			 asn1_ect.c asn1_ect.h asn1.h
libsuppserv_la_LDFLAGS = -version-info 2:0:0

AM_CPPFLAGS = -I$(top_srcdir)/include

CLEANFILES = *~
